# MarketAnalysisBot

./: pyproject.toml
flask_app/controllers/: routes.py  run_market_analysis.py
