[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = ""
authors = ["Jorge Leon <84067777+jorge2751@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^3.0.0"
langchain = "^0.0.314"
slack-sdk = "^3.23.0"
slack-bolt = "^1.18.0"
python-dotenv = "^1.0.0"
google-search-results = "^2.4.2"
openai = "^0.28.1"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
